# paradizelib

./: CMakeLists.txt  COPYING  INSTALL  Makefile  Makefile.wiz  ProjectHome.md  README  TODO  astylerc  authors.txt  config.h  paradizelib.cbp
includes/: ParadizeLib.h  ParadizeLib_Joystick.h
src/: ParadizeLib.c  ParadizeLib_Joystick.c  testprogram.c
tools/: Toolchain-GP2XWiz.cmake
